# nepomukextras

./: CMakeLists.txt  NepomukExtrasConfig.cmake.in
src/: CMakeLists.txt  Messages.sh  classmodel.cpp  classmodel.h  daterange.cpp  daterange.h  daterangeselectionwidget.h  kcompleter.cpp  kcompleter.h  kcompletiondelegate.cpp  kcompletiondelegate.h  kcompletionitem.cpp  kcompletionitem.h  kcompletionmodel.cpp  kcompletionmodel.h  nepomukextras_config.h.cmake  nepomukextras_export.h  nepomukextras_version.cpp  nepomukextras_version.h.cmake  nepomukmenu.cpp  nepomukmenu.h  newresourcedialog.cpp  newresourcedialog.h  newresourcedialog.ui  pimomodel.cpp  pimomodel.h  propertycompleter.cpp  propertycompleter.h  resourceactions.cpp  resourceactions.h  resourcecompletion.cpp  resourcecompletion.h  resourceinputwidget.cpp  resourceinputwidget.h  resourcepropertydelegate.cpp  resourcepropertydelegate.h  resourceselectiondialog.cpp  resourceselectiondialog.h  searchmenu.cpp  searchmenu.h  (+8 more)
test/: CMakeLists.txt  propertycompletertest.cpp
